<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="@string/drawer_section_general">
        <menu>
            <group
                android:id="@+id/drawer_group_main"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/drawer_summary_monthly"
                    android:icon="@drawable/home_24px"
                    android:title="@string/drawer_menu_summary" />
                <item
                    android:id="@+id/drawer_categories"
                    android:icon="@drawable/ic_category_label_24"
                    android:title="@string/drawer_categories" />
                <item
                    android:id="@+id/drawer_budget"
                    android:icon="@drawable/ic_wallet_24"
                    android:title="@string/drawer_menu_budget" />
            </group>
        </menu>
    </item>

    <item android:title="@string/drawer_section_settings">
        <menu>
            <group
                android:id="@+id/drawer_group_prefs"
                android:checkableBehavior="none">
                <item
                    android:id="@+id/drawer_account"
                    android:icon="@drawable/ic_person"
                    android:title="@string/drawer_menu_account" />
                <item
                    android:id="@+id/drawer_theme_language"
                    android:icon="@drawable/ic_theme_24"
                    android:title="@string/drawer_menu_theme_language" />
                <item
                    android:id="@+id/drawer_help"
                    android:icon="@drawable/ic_warning_amber_24"
                    android:title="@string/drawer_menu_help" />
                <item
                    android:id="@+id/drawer_contact"
                    android:icon="@drawable/ic_link_24"
                    android:title="@string/drawer_menu_contact" />
            </group>
        </menu>
    </item>

    <group
        android:id="@+id/drawer_group_sign_in"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_sign_in"
            android:icon="@drawable/ic_person"
            android:title="@string/drawer_sign_in"
            android:visible="false" />
    </group>

    <group
        android:id="@+id/drawer_group_sign_out"
        android:checkableBehavior="none">
        <item
            android:id="@+id/drawer_sign_out"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/drawer_sign_out" />
    </group>
</menu>
